# propertydna-landing

./: .env.example  .gitignore  AUDIENCE_ENGAGEMENT_OS.md  App.tsx  BUILD_10_NOTES.md  BUILD_8_NOTES.md  GUERRILLA_GROWTH.md  IAP_INTEGRATION_PLAN.md  MANYCHAT-60-SECOND-SETUP.md  README.md  netlify.toml  package.json
.claude/: settings.json
performance-os/apps/api/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
performance-os/apps/api/alembic/: env.py  script.py.mako
performance-os/apps/api/alembic/versions/: 0ac05b74d053_add_profile_timezone.py  1a7e81bf0128_add_nutrition_adjustment_columns.py  b7dbf40a7c34_add_device_tokens_and_notification_logs.py  d08adad5da55_initial_schema.py
performance-os/apps/api/app/: main.py  seed.py
performance-os/apps/api/app/ai/: base.py  factory.py  validation.py
performance-os/apps/api/app/api/: deps.py
performance-os/apps/api/app/core/: branding.py  config.py  logging.py  security.py  timeutil.py
performance-os/apps/api/app/db/: base.py
performance-os/apps/api/app/engines/: calendar_match.py  dedup.py  morning_routine.py  nutrition.py  readiness.py
performance-os/apps/api/app/models/: __init__.py
performance-os/apps/api/performance_os_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
performance-os/apps/api/tests/: conftest.py  test_ai_validation.py  test_api_flow.py  test_engines_misc.py  test_micronutrients.py  test_notifications.py  test_nutrition.py  test_pagination.py  test_readiness.py  test_real_ai_provider.py  test_security.py  test_timezone.py  test_weekly_adjustment.py
(+950 files in other folders)
